--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -1,6 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Ruda:wght@400;500;600;700;800;900&display=swap');
 @import './navbar.css';
 @import './buttons.css';
+@import './background.css';
+@import './inputs.css';
+@import './position.css';
+@import './colors.css';
+
 
 /*Color*/
 :root {
