--- a/assets/css/buttons.css
+++ b/assets/css/buttons.css
@@ -24,3 +24,18 @@
     outline: none;
     border-radius: 0px;
 }
+
+.btn-login {
+    color: var(--bg-white);
+    background-color: var(--bg-orange);
+    outline: none;
+    box-shadow: none;
+    font-size: 1rem;
+    font-family: "Ruda", sans-serif;
+    font-weight: 400;
+}
+
+.btn-login:hover {
+    color: var(--bg-white);
+    background-color: var(--bg-orange);
+}
